--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,5 +1,29 @@
 version: '3.3'
 services:
+ receiver:
+  image: receiver
+  ports: 
+   - "8080:8080"
+  depends_on:
+   - "kafka"
+ storage:
+  image: storage
+  ports:
+   - "8090:8090"
+  depends_on:
+   - "kafka"
+ processor:
+  image: processing
+  ports:
+   - "8100:8100"
+  depends_on:
+   - "storage"
+ audit:
+  image: audit
+  ports:
+   - "8110:8110"
+  depends_on:
+   - "kafka"
  zookeeper:
   image: wurstmeister/zookeeper
   ports:
