--- a/Processing/app_conf.yaml
+++ b/Processing/app_conf.yaml
@@ -4,4 +4,4 @@ datastore:
 scheduler:
   period_sec: 5
 eventstore:
-  url: http://localhost:8090
+  url: kafka-3855.eastus2.cloudapp.azure.com:8090
