--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -57,8 +57,7 @@ services:
    - "kafka"
  processor:
   image: processing
-  ports:
-   - "8100:8100"
+  network_mode: "host"
   depends_on:
    - "storage"
  audit:
