--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -2,11 +2,11 @@ version: 1
 datastore:
   user: kafka
   password: 
-  hostname: kafka-3855.eastus2.cloudapp.azure.com
+  hostname: localhost
   port: 3306
   db: events
 
 events:
-  hostname: kafka-3855.eastus2.cloudapp.azure.com
+  hostname: localhost
   port: 9092
   topic: events
